--- a/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
@@ -331,7 +331,7 @@
     }
     @media (max-width: $mx-col-sm) {
         .comments-area {
-            padding: 1em;
+            padding: 2em 1em 1em 1em;
             .ast-comment-cite-wrap,
             .ast-comment-time,
             .comment-form-textarea {
